[package]
name = "try_from_int_str"
version = "0.4.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/try_from_int_str"
homepage = "https://github.com/pic16f877ccs/try_from_int_str"
license = "GPL-3.0-or-later"

[dev-dependencies]
paste = "1.0.11"
