[package]
name = "try_from_int_str"
version = "0.5.0"
edition = "2024"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/try_from_int_str"
homepage = "https://github.com/pic16f877ccs/try_from_int_str"
license = "MIT OR Apache-2.0"

[dev-dependencies]
paste = "1.0.11"
